--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "kovalevskaja-applets",
   "version": "0.1.0",
   "private": true,
+  "main": "../../frontend/kovalevskaja-front/public/test/applet.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-wc-async": "vue-cli-service build --target wc-async --name applet src/components/*.vue"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-plugin-load-script": "^1.3.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -41,7 +44,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {},
+    "globals": {
+      "GGBApplet": "readonly"
+    }
   },
   "browserslist": [
     "> 1%",
