--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build-wc-async": "vue-cli-service build --target wc-async --name applet src/components/*.vue"
+    "build-wc-async": "vue-cli-service build --target wc-async --name applet 'src/components/*.vue'"
   },
   "dependencies": {
     "core-js": "^3.6.5",
